Auto retry expired tasks
