# app/docs/openapi.yaml
@@ -11,8 +11,8 @@ info:
     \ Align the transcript to the audio/video file.\n    3. Diarize: Diarize an audio/video\
     \ file into speakers.\n    4. Combine Transcript and Diarization: Combine the\
     \ transcript and diarization results.\n\n    ## Supported file extensions:\n \
-    \   AUDIO_EXTENSIONS = {'.oga', '.ogg', '.mp3', '.wma', '.awb', '.amr', '.m4a',\
-    \ '.wav', '.aac'}\n\n    VIDEO_EXTENSIONS = {'.mov', '.mp4', '.avi', '.mkv', '.wmv'}\n\
+    \   AUDIO_EXTENSIONS = {'.awb', '.m4a', '.ogg', '.wma', '.mp3', '.aac', '.amr',\
+    \ '.wav', '.oga'}\n\n    VIDEO_EXTENSIONS = {'.mkv', '.mov', '.avi', '.mp4', '.wmv'}\n\
     \n    "
   version: 0.0.1
 paths:
@@ -977,11 +977,12 @@ paths:
       - Tasks Management
       summary: Retry Task
       description: "Retry a specific task by its identifier.\n\nArgs:\n    identifier\
-        \ (str): The identifier of the task.\n    transcript (UploadFile): Uploaded\
-        \ aligned transcript file.\n    diarization (UploadFile): Uploaded diarization\
-        \ result file.\n    service: Task management service dependency.\n\nReturns:\n\
-        \    Response: Confirmation message of task retrying.\n\nRaises:\n    TaskNotFoundError:\
-        \ If the task is not found."
+        \ (str): The identifier of the task.\n    service: Task management service\
+        \ dependency.\n    transcription_service: Transcription service dependency.\n\
+        \    alignment_service: Alignment service dependency.\n    diarization_service:\
+        \ Diarization service dependency.\n    speaker_service: Speaker assignment\
+        \ service dependency.\n\nReturns:\n    Response: Confirmation message of task\
+        \ retrying.\n\nRaises:\n    TaskNotFoundError: If the task is not found."
       operationId: retry_task_task__identifier__retry_post
       parameters:
       - name: identifier
@@ -990,11 +991,6 @@ paths:
         schema:
           type: string
           title: Identifier
-      requestBody:
-        content:
-          multipart/form-data:
-            schema:
-              $ref: '#/components/schemas/Body_retry_task_task__identifier__retry_post'
       responses:
         '200':
           description: Successful Response
@@ -1687,22 +1683,6 @@ components:
       - aligned_transcript
       - diarization_result
       title: Body_4__Combine_Transcript_and_Diarization_result_service_combine_post
-    Body_retry_task_task__identifier__retry_post:
-      properties:
-        transcript:
-          anyOf:
-          - type: string
-            format: binary
-          - type: 'null'
-          title: Transcript
-        diarization:
-          anyOf:
-          - type: string
-            format: binary
-          - type: 'null'
-          title: Diarization
-      type: object
-      title: Body_retry_task_task__identifier__retry_post
     Body_speech_to_text_speech_to_text_post:
       properties:
         ref_user_id:
